test/typeerrors/Examples/ExprNegateExpr.hs
module ExprNegateExpr where

f = - "schaap"
